Rename case for some images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="stats"><div><img src="monkey.png" class="monkeyImage"></div>Манкіс:<span id="monkeyCount"></span></div>
 <div class="stats"><div><img src="bananapeel.png" class="bananaPeel"></div>Шкірки:<span id="bananaPeelCount"></span></div>
 <div class="stats"><div><img src="bananaLeaf.png" class="bananaLeafImage" alt="Leaf"></div>Листя: <span id="bananaLeafCount"></span></div>
-<div class="stats"><div><img src="bananaSmoothie.PNG" class="bananaSmoothieImage"></div>Смузі:<span id="bananaSmoothieCount"></span></div>
+<div class="stats"><div><img src="bananaSmoothie.png" class="bananaSmoothieImage"></div>Смузі:<span id="bananaSmoothieCount"></span></div>
 
 <div class="banana-container">
     <img src="banana.png" class="clickingBanana" onclick="collectBanana(event)" style="cursor: pointer;" draggable="false"
@@ -70,7 +70,7 @@
 <button onclick="buyLeaf()">Купити (200)</button> </div>
 
 <div class="shop">
-    <h3><img src="bananaSmoothie.PNG" class="bananaSmoothieImage">Бананове смузі</h3>  
+    <h3><img src="bananaSmoothie.png" class="bananaSmoothieImage">Бананове смузі</h3>  
     <p>+3 банани за клік на 15 секунд</p>
     <button id="smoothie-button" onclick="buySmoothie()">Купити (300)</button> </div>
 
